--- a/app/src/main/res/drawable/button_background_azul.xml
+++ b/app/src/main/res/drawable/button_background_azul.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     android:shape="rectangle">
-    <stroke android:color="#000000"
-            android:width="2dp"/>
+    <solid android:color="@color/colorAccent" />
     <corners android:radius="30dp" />
 </shape>
