--- a/app/src/main/res/layout/fragment_pesquisa.xml
+++ b/app/src/main/res/layout/fragment_pesquisa.xml
@@ -1,13 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.pesquisa.PesquisaFragment">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/img_campo_disciplina"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="28dp"
+        android:src="@drawable/campo_branco"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_campo_instituicao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/campo_branco"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_campo_disciplina" />
+
+    <ImageView
+        android:id="@+id/ic_disciplina"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:src="@drawable/ic_caderno_black"
+        app:layout_constraintBottom_toBottomOf="@+id/img_campo_disciplina"
+        app:layout_constraintStart_toStartOf="@+id/img_campo_disciplina"
+        app:layout_constraintTop_toTopOf="@+id/img_campo_disciplina" />
+
+    <ImageView
+        android:id="@+id/ic_instituicao"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:src="@drawable/ic_chapeu_black"
+        app:layout_constraintBottom_toBottomOf="@+id/img_campo_instituicao"
+        app:layout_constraintStart_toStartOf="@+id/img_campo_instituicao"
+        app:layout_constraintTop_toTopOf="@+id/img_campo_instituicao" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="343dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_background_azul"
+        android:text="Buscar"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_campo_instituicao" />
+
+    <EditText
+        android:id="@+id/editText_disciplina"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="Encontre sua matéria"
+        android:inputType="textPersonName"
+        android:background="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/img_campo_disciplina"
+        app:layout_constraintStart_toEndOf="@+id/ic_disciplina"
+        app:layout_constraintTop_toTopOf="@+id/img_campo_disciplina" />
+
+    <EditText
+        android:id="@+id/editText_instituicao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="#00FFFFFF"
+        android:ems="10"
+        android:hint="Nome da Instituição"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/img_campo_instituicao"
+        app:layout_constraintStart_toEndOf="@+id/ic_instituicao"
+        app:layout_constraintTop_toTopOf="@+id/img_campo_instituicao" />
+
+    <TextView
+        android:id="@+id/txt_ecolha_disciplina"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/roboto"
+        android:text="Ou escolha uma categoria"
+        android:textSize="19sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
