--- a/app/src/main/res/layout/fragment_pesquisa.xml
+++ b/app/src/main/res/layout/fragment_pesquisa.xml
@@ -6,12 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.pesquisa.PesquisaFragment">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
-
     <ImageView
         android:id="@+id/img_campo_disciplina"
         android:layout_width="wrap_content"
@@ -44,7 +38,7 @@
         app:layout_constraintTop_toTopOf="@+id/img_campo_disciplina" />
 
     <ImageView
-        android:id="@+id/ic_instituicao"
+        android:id="@+id/ic_curso"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginStart="24dp"
@@ -86,14 +80,14 @@
         android:id="@+id/editText_instituicao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:background="#00FFFFFF"
         android:ems="10"
         android:hint="Nome da Instituição"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/img_campo_instituicao"
-        app:layout_constraintStart_toEndOf="@+id/ic_instituicao"
+        app:layout_constraintStart_toEndOf="@+id/ic_curso"
         app:layout_constraintTop_toTopOf="@+id/img_campo_instituicao" />
 
     <TextView
@@ -108,5 +102,14 @@
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_categorias"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_ecolha_disciplina" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
