--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#17C0C6</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorYellow">#FFC433</color>
 </resources>
