--- a/app/src/main/res/layout/activity_anuncio.xml
+++ b/app/src/main/res/layout/activity_anuncio.xml
@@ -1,6 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_login">
+
+    <TextView
+        android:id="@+id/txtTitulo"
+        android:layout_width="142dp"
+        android:layout_height="43dp"
+        android:background="#00FFFFFF"
+        android:text="TextView"
+        android:textColor="@color/colorWhite"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="ANÚNCIO" />
+
+    <ImageView
+        android:id="@+id/imgTitulo"
+        android:layout_width="81dp"
+        android:layout_height="53dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtTitulo"
+        app:layout_constraintEnd_toStartOf="@+id/txtTitulo"
+        app:layout_constraintTop_toTopOf="@+id/txtTitulo"
+        app:layout_constraintVertical_bias="0.4"
+        app:srcCompat="@drawable/ic_chapeu_white" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout1"
+        android:layout_width="390dp"
+        android:layout_height="326dp"
+        android:layout_marginTop="96dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/btnContratar"
+            android:layout_width="176dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="60dp"
+            android:background="@drawable/button_background_white"
+            android:text="Contratar"
+            android:textColor="#1D9869"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toEndOf="@+id/img_perfil" />
+
+        <Button
+            android:id="@+id/btnPerfil"
+            android:layout_width="112dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginBottom="100dp"
+            android:background="@drawable/button_background_white"
+            android:text="Perfil"
+            android:textColor="#1D9869"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toEndOf="@+id/img_perfil" />
+
+        <TextView
+            android:id="@+id/txtValorAnuncio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="104dp"
+            android:text="R$ 50/h"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toEndOf="@+id/img_perfil" />
+
+        <RatingBar
+            android:id="@+id/avaliacaoPerfil"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="144dp"
+            android:progressTint="@color/colorYellow"
+            android:rating="4"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toEndOf="@+id/img_perfil" />
+
+        <TextView
+            android:id="@+id/txtProfessor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="168dp"
+            android:text="Ruan Kenned"
+            android:textColor="@color/colorWhite"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toEndOf="@+id/img_perfil" />
+
+        <TextView
+            android:id="@+id/txtQtdAval"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="96dp"
+            android:layout_marginBottom="144dp"
+            android:text="(5 avaliações)"
+            android:textColor="@color/colorWhite"
+            android:textSize="10dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toEndOf="@+id/img_perfil" />
+
+        <ImageView
+            android:id="@+id/img_perfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="60dp"
+            android:src="@drawable/ruan_foto"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toStartOf="@+id/layout1" />
+
+        <TextView
+            android:id="@+id/lblDescricao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp"
+            android:text="Descrição"
+            android:textColor="@color/colorWhite"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txtDescricao"
+            app:layout_constraintStart_toStartOf="@+id/txtDescricao" />
+
+        <EditText
+            android:id="@+id/txtDescricao"
+            android:layout_width="292dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="32dp"
+            android:background="#00FFFFFF"
+            android:ems="10"
+            android:enabled="false"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            app:layout_constraintEnd_toEndOf="@+id/btnContratar"
+            app:layout_constraintTop_toBottomOf="@+id/img_perfil" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reccycleAvaliacoes"
+        android:layout_width="390dp"
+        android:layout_height="304dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout1"
+        app:layout_constraintVertical_bias="0.247" />
+
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="447dp"
+        android:layout_height="692dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
