--- a/app/src/main/res/layout/activity_contratar_aula.xml
+++ b/app/src/main/res/layout/activity_contratar_aula.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/img_wave_topo"
@@ -28,6 +28,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/txt_disciplinaHint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Disciplina"
+        app:layout_constraintBottom_toTopOf="@+id/img_campoD"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/img_campoD"
         android:layout_width="320dp"
@@ -39,14 +50,59 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_contratarAula"
         app:srcCompat="@drawable/button_transparente_r10" />
 
+    <ImageView
+        android:id="@+id/ic_disciplinaAula"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_campoD"
+        app:layout_constraintStart_toStartOf="@+id/img_campoD"
+        app:layout_constraintTop_toTopOf="@+id/img_campoD"
+        app:layout_constraintVertical_bias="0.629"
+        app:srcCompat="@drawable/ic_caderno_black" />
+
     <TextView
-        android:id="@+id/txt_disciplinaHint"
+        android:id="@+id/txt_nmDisciplinaAula"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Disciplina"
-        app:layout_constraintBottom_toTopOf="@+id/img_campoD"
+        android:layout_marginStart="24dp"
+        android:text="Cálculo I"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_campoD"
+        app:layout_constraintStart_toEndOf="@+id/ic_disciplinaAula"
+        app:layout_constraintTop_toTopOf="@+id/img_campoD" />
+
+    <TextView
+        android:id="@+id/txt_professorHint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Professor"
+        app:layout_constraintBottom_toTopOf="@+id/img_campoD2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_campoD2"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_campoD"
+        app:srcCompat="@drawable/button_transparente_r10" />
+
+    <Spinner
+        android:id="@+id/spinnerDia"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="292dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
