--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -227,18 +227,16 @@
         app:srcCompat="@drawable/ic_calendar_24"
         tools:ignore="VectorDrawableCompat" />
 
-    <EditText
+    <TextView
         android:id="@+id/editText_DtNascimento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:background="#00FFFFFF"
         android:clickable="true"
-        android:editable="false"
         android:ems="10"
-        android:hint="Data de Nascimento"
-        android:inputType="date"
-        android:textColorHint="@color/colorWhite"
+        android:text="Data de Nascimento"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/img_campo5"
         app:layout_constraintStart_toEndOf="@+id/ic_DtNascimento"
         app:layout_constraintTop_toTopOf="@+id/img_campo5" />
